# d365fo-mcp

./: .env.example  .gitignore  APPROACH.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main_d365fnomcpserver2.yml  main_d365fomcp01.yml
data/: sample_instructions.json  schema.sql
scripts/: manual_sync.py
src/d365fo_mcp/: __init__.py  config.py  di_container.py  main.py  server_factory.py
src/d365fo_mcp/auth/: __init__.py  d365_auth.py  interface.py
src/d365fo_mcp/client/: __init__.py  d365_client.py  interface.py
src/d365fo_mcp/factories/: __init__.py  auth_factory.py  client_factory.py  repository_factory.py  service_factory.py
src/d365fo_mcp/repositories/: __init__.py
src/d365fo_mcp/repositories/instructions/: __init__.py  interface.py
src/d365fo_mcp/repositories/metadata/: __init__.py  interface.py
src/d365fo_mcp/repositories/sqlite/: __init__.py  bulk_parser.py  database.py  instructions_repository.py  metadata_repository.py  migrations.py  schemas.py
src/d365fo_mcp/repositories/supabase/: __init__.py
src/d365fo_mcp/services/: __init__.py
src/d365fo_mcp/services/instructions/: __init__.py  interface.py  service.py
src/d365fo_mcp/services/metadata/: __init__.py  background_sync.py  interface.py  service.py
src/d365fo_mcp/tools/: __init__.py  registry.py
src/d365fo_mcp/tools/capabilities/: __init__.py  ledger.py
tests/: conftest.py
tests/unit/: test_instructions_service.py
